--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8" />
 
         <!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">		
         <!-- end -->
 
         <!-- favicon -->
