--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <meta property="og:title" content="Leo React App | Leonardo Henrique" />
             <meta property="og:description" content="Ambiente de desenvolvimento para aplicações web em React utilizado Vite. Boilerplate em SASS para interfaces consistentes." />
             <meta property="og:url" content="https://leo-henrique.github.io/leo-react-app/" />
-            <!-- <meta property="og:image" content="https://leo-henrique.github.io/leo-react-app/assets/og-image.png" />
-            <meta property="og:image:alt" content="Meu favicon" /> -->
+            <meta property="og:image" content="https://leo-henrique.github.io/leo-react-app/assets/og-image.png" />
+            <meta property="og:image:alt" content="My favicon logo" />
             <!-- end -->
         <!-- end -->
 
