Home page converted to English

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="pt-br">
+<html lang="en-us">
     <head>
         <meta charset="UTF-8" />
 
@@ -23,7 +23,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
             <!-- Open Graph protocol -->
-            <meta property="og:locale" content="pt_BR" />
+            <meta property="og:locale" content="en_US" />
             <meta property="og:type" content="website" />
             <meta property="og:site_name" content="Leo React App" />
             <meta property="og:title" content="Leo React App | Leonardo Henrique" />
@@ -34,7 +34,7 @@
             <!-- end -->
         <!-- end -->
 
-        <title>Leo React App | Leonardo Henrique</title>
+        <title>Léo React App | Leonardo Henrique</title>
     </head>
 <body>
     
