Changed open graph protocol values

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <!-- Open Graph protocol -->
             <meta property="og:locale" content="en_US" />
             <meta property="og:type" content="website" />
-            <meta property="og:site_name" content="Leo React App" />
-            <meta property="og:title" content="Leo React App | Leonardo Henrique" />
+            <meta property="og:site_name" content="Léo React App" />
+            <meta property="og:title" content="Léo React App | Leonardo Henrique" />
             <meta property="og:description" content="Development environment for web applications in React using Vite. Boilerplate in SASS for consistent interfaces." />
             <meta property="og:url" content="https://leo-henrique.github.io/leo-react-app/" />
             <meta property="og:image" content="https://leo-henrique.github.io/leo-react-app/assets/og-image.png" />
