--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
         <!-- end -->
 
         <!-- favicon -->
-		<link rel="icon" type="image/svg+xml" href="/assets/vite.svg" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+        <link rel="manifest" href="/assets/site.webmanifest">
+        <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#00b2ff">
+        <link rel="shortcut icon" href="/assets/favicon.ico">
+        <meta name="apple-mobile-web-app-title" content="L&eacute;o React App">
+        <meta name="application-name" content="L&eacute;o React App">
+        <meta name="msapplication-TileColor" content="#171823">
+        <meta name="msapplication-config" content="/assets/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
         <!-- end -->
 
         <!-- metadata -->
