--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- end -->
         <!-- end -->
 
-        <title translate="no">Léo React App | Leonardo Henrique</title>
+        <title>Léo React App | Leonardo Henrique</title>
     </head>
 <body>
     
